archive/wip/ingress-validator-test.yaml
# Source: kong/templates/admission-webhook.yaml
kind: ValidatingWebhookConfiguration
apiVersion: admissionregistration.k8s.io/v1
metadata:
  name: kong-ingress-kong-validations
  namespace: andrevtg
  labels:
    app.kubernetes.io/name: kong
    # helm.sh/chart: kong-2.19.0
    # app.kubernetes.io/instance: "kong-ingress"
    # app.kubernetes.io/managed-by: "Helm"
    # app.kubernetes.io/version: "3.2"
webhooks:
- name: validations.kong.konghq.com
  objectSelector:
    matchExpressions:
    - key: owner
      operator: NotIn
      values:
      - helm
  failurePolicy: Ignore
  sideEffects: None
  admissionReviewVersions: ["v1beta1"]
  rules:
  - apiGroups:
    - configuration.konghq.com
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - kongconsumers
    - kongplugins
    - kongclusterplugins
    - kongingresses
    scope: "Namespaced"
  - apiGroups:
    - ''
    apiVersions:
    - 'v1'
    operations:
    - UPDATE
    resources:
    - secrets
    scope: "Namespaced"
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKRENDQWd5Z0F3SUJBZ0lSQU0rSzIyUHNHV2poT2xjYWh3cDJ6cVV3RFFZSktvWklodmNOQVFFTEJRQXcKSERFYU1CZ0dBMVVFQXhNUmEyOXVaeTFoWkcxcGMzTnBiMjR0WTJFd0hoY05Nak13TkRFME1qRTBNRFV3V2hjTgpNek13TkRFeE1qRTBNRFV3V2pBY01Sb3dHQVlEVlFRREV4RnJiMjVuTFdGa2JXbHpjMmx2YmkxallUQ0NBU0l3CkRRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFPZFRHNHpkclVNQXFLdHVyZnp6bUQvZkF6VTcKY3YwK2Qxd2Y5bjZPTjVkbGRCZWE0V0t4czQ0SzhOTjNiWUlJckpOaVJJWXdyam1pWUR1OGV3NEVRVHZKdHBxZAo3OTB4VlJDRDNiVT [...]
    service:
      name: kong-ingress-kong-validation-webhook
      namespace: andrevtg
